# ares_code_projects

./: README.md
laser/: package.xml  setup.cfg  setup.py
laser/config/: params.yaml
laser/laser/: Real.py  detect.py  laser_lidar_subscriber.py  pd_motion_planner.py  pid.py  ros2publisher.py  transformation.py
laser/launch/: all_nodes.launch.py  laser_launch.py  start.launch.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot.launch.py  my_robot_gazebo.launch.xml  wheel_test.launch.py
my_robot_bringup/rviz/: urdf_config.rviz
my_robot_bringup/src/: robot_controller.py
my_robot_description/: CMakeLists.txt  CMakeLists1.txt  package.xml  package1.xml
my_robot_description/config/: joint_names_舵轮底盘0.yaml
my_robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_description/install/robocon25_sim/share/robocon25_sim/: package.bash  package.zsh
my_robot_description/launch/: control.launch.py  display.launch.xml  load_world.launch.py  load_world.launch.xml
my_robot_description/meshes/: base_link.STL  wheel1.STL  wheel1_1.STL  wheel2.STL  wheel2_2.STL  wheel3.STL  wheel3_3.STL
my_robot_description/models/: robot.model
my_robot_description/models/RoboCon25_Field/: model.config  model.sdf
my_robot_description/models/RoboCon25_Field/materials/scripts/: robocon25_field.material
my_robot_description/models/basketball/: basketball.sdf  model.config  model.dae
my_robot_description/models/hoop1/: hoop.sdf  model.config  model.dae
my_robot_description/models/hoop2/: hoop.sdf
my_robot_description/models/hoopC/: model.config  model.dae
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: color.xacro  common_inertia.xacro  my_robot.urdf.xacro  my_robot.urdf1.xacro  my_robot.urdf_bak.xacro  my_robot.urdf_bak1.xacro  myrobot_ros2_control.xacro  舵轮底盘0.csv
my_robot_description/urdf/actuator/: wheel.urdf.xacro
my_robot_description/urdf/plugin/: imu_plugin copy.xacro  imu_plugin.xacro  laser_plugin.xacro  laser_plugin_single.xacro
my_robot_description/urdf/sensor/: imu.urdf copy.xacro  imu.urdf.xacro  laser.urdf.xacro  laser_single.urdf.xacro
my_robot_description/worlds/: basketball.world  new_vision.world  robocon25.world
myrobot_controller/: CMakeLists.txt  package.xml
myrobot_controller/config/: joy_teleop.yaml  myrobot_controllers.yaml
myrobot_controller/include/myrobot_controller/: simple_controller.hpp
myrobot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
myrobot_controller/myrobot_controller/: read_imu_yaw.py  read_laser copy.py  read_laser.py  simple_controller.py  test_cmd.py
myrobot_controller/src/: fake_vel.cpp  simple_controller.cpp
omni_mpc_controller/: package.xml  setup.cfg  setup.py
omni_mpc_controller/config/: params.yaml
omni_mpc_controller/launch/: MPC.launch.py  keyboard.launch.py
omni_mpc_controller/omni_mpc_controller/: MPC.py  __init__.py  keyboard_control.py
omni_mpc_controller/test/: MPC_2.0_matploylib.py  keyboard_teleop.py  obstacle_predictor_node.py  omni_mpc_controller_node.py
remote_rc_node/: CMakeLists.txt  package.xml
remote_rc_node/src/: remote_rc_node.cpp  udp_joy_node.cpp
usb_bulk_node/: CMakeLists.txt  package.xml
usb_bulk_node/include/receive_remote_control/: ares_protocol.hpp
usb_bulk_node/src/: ares_protocol.cpp  ares_protocol.hpp  easy_example.cpp  usb_bulk_node.cpp
